crates/tui/src/widget/snapshots/inspectah_tui__widget__section_nav__tests__renders_sections_with_counts.snap
---
source: inspectah-tui/src/widget/section_nav.rs
expression: buffer_to_string(&buf)
---
─ Sections ─
1 Packages    142
2 Configs      47
3 Services     23
